Adjusting repository database to save correctly all data from extract file

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,9 +5,10 @@ spring.datasource.username=postgres
 spring.datasource.password=123
 spring.datasource.driver-class-name=org.postgresql.Driver
 
-spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.hibernate.ddl-auto=none
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.default_schema=public
+spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
 
 
 spring.flyway.enabled=true
